--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -5,6 +5,52 @@ layout: Stylesheet
 @import "/assets/css/highlight.css";
 /*@import "/assets/css/theme.css"; leaving out for now, will tinker w/color switcher later...*/
 /* Containers: Body, Container, Box, Main, Header, Content */
+
+@font-face {
+  font-family: 'Ginto';
+  font-display: swap;
+  font-style: normal;
+  font-weight: 300;
+  font-named-instance: 'Regular';
+  src: url('../fonts/GintoNormal-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Ginto';
+  font-display: swap;
+  font-style: normal;
+  font-weight: 500;
+  font-named-instance: 'Regular';
+  src: url('../fonts/GintoNormal-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GT-Alp';
+  font-display: swap;
+  font-style: normal;
+  font-weight: 300;
+  font-named-instance: 'Regular';
+  src: url('../fonts/GT-Alpina-Standard-Light.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GT-Alp';
+  font-display: swap;
+  font-style: normal;
+  font-weight: 700;
+  font-named-instance: 'Regular';
+  src: url('../fonts/GintoNormal-Medium.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'GT-Alp';
+  font-display: swap;
+  font-style: italic;
+  font-weight: 300;
+  font-named-instance: 'Regular';
+  src: url('../fonts/GT-Alpina-Standard-Light-Italic.woff2') format('woff2');
+}
+
 @font-face {
   font-family: 'Koor';
   font-display: swap;
